# tauri-todo

./: .gitignore  README.md  build.ps1
frontend/: capture.html  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  CaptureApp.tsx  capture.tsx  index.css
frontend/src/components/: AddTodo.tsx  EmptyState.tsx  FilterTabs.tsx  IdeasView.tsx  ListSwitcher.tsx  SearchBar.tsx  Stats.tsx  Titlebar.tsx  TodoItem.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/lib/: smart-input.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
ui/: app.js  index.html  styles.css
