[package]
name = "todo-app"
version = "1.0.0"
edition = "2021"
description = "A clean glassmorphism Todo App"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "todo_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]
